<resources>
    <string name="app_name">GymLog</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_btn">Sign in me</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="need_help"><u>Need Help?</u></string>
    <string name="background_image">Background Image</string>
    <string name="welcome_back">Welcome\nBack!</string>
    <string name="sign_in">Sign In</string>
    <string name="hey_good_to_see_you_again">Hey! Good to see you again!</string>
    <string name="sign_up_redirect"><u>Sign Up</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="we_are_happy_to_see_you_here">We are happy to see you here!</string>
    <string name="sign_in_redirect"><u>Sign in</u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_btn">Sign up me</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email_input_mandatory_validation">Please enter the email</string>
    <string name="password_input_mandatory_validation">Please enter the password</string>
    <string name="log_your_gym_session">Log your gym session!</string>
    <string name="close_popup">close popup</string>
    <string name="save">Save</string>
    <string name="log_list">Log List</string>
    <string name="log_a_workout">Log a workout</string>
    <string name="open_camera">Open Camera</string>
    <string name="settings">Settings</string>
</resources>