<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.SignUpFragment">

        <ImageView
            android:id="@+id/ivBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background_image"
            android:scaleType="fitXY"
            android:src="@drawable/background_sign_up" />

        <Button
            android:id="@+id/btnSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/Button_1"
            android:text="@string/sign_up_btn"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/tvHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="33dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvSubHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeader"
            android:layout_marginStart="33dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/inter"
            android:text="@string/we_are_happy_to_see_you_here"
            android:textColor="@color/Primary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvHeader"
            app:layout_constraintTop_toBottomOf="@+id/tvSubHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="36dp"
            android:autofillHints="name"
            android:drawableStart="@drawable/account"
            android:drawablePadding="5dp"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/etEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvHeader"
            app:layout_constraintTop_toBottomOf="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="36dp"
            android:autofillHints="emailAddress"
            android:drawableStart="@drawable/email"
            android:drawablePadding="5dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvHeader"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="36dp"
            android:autofillHints="password"
            android:drawableStart="@drawable/password"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvFooter"
            app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
            app:layout_constraintStart_toStartOf="@+id/btnSignUp"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvSubFooter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvFooter"
            app:layout_constraintStart_toStartOf="@+id/tvFooter"
            app:layout_constraintTop_toBottomOf="@+id/tvFooter"
            app:layout_constraintVertical_bias="0.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter"
            android:text="@string/sign_in_redirect"
            android:textColor="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>