<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.gymlog.ui.auth.signIn.SignInViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.signIn.SignInFragment">

        <ImageView
            android:id="@+id/ivBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/background_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/background_image" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textAllCaps="false"
            android:backgroundTint="@color/Button_1"
            android:text="@string/sign_in_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <TextView
            android:id="@+id/tvSignInHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/inter_bold"
            android:textFontWeight="800"
            android:includeFontPadding="true"
            android:text="@string/welcome_back"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSubHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/hey_good_to_see_you_again"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/inter"
            app:layout_constraintStart_toStartOf="@+id/tvSignInHeader"
            app:layout_constraintTop_toBottomOf="@+id/tvSignInHeader" />

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/sign_in"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvSignInHeader"
            app:layout_constraintTop_toBottomOf="@+id/tvSubHeader" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="36dp"
            android:autofillHints="emailAddress"
            android:drawableStart="@drawable/email"
            android:drawablePadding="5dp"
            android:hint="@string/email_address"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvHeader"
            app:layout_constraintTop_toBottomOf="@+id/tvHeader"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/tvEmailError"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.emailError}"
            android:textColorHint="@color/design_default_color_error"
            android:textAlignment="textEnd"
            android:textColor="@color/design_default_color_error"
            app:layout_constraintEnd_toEndOf="@+id/etEmail"
            app:layout_constraintStart_toStartOf="@+id/etEmail"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="36dp"
            android:autofillHints="password"
            android:drawableStart="@drawable/password"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvHeader"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tvPasswordError"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.passwordError}"
            android:textColorHint="@color/design_default_color_error"
            android:textAlignment="textEnd"
            android:textColor="@color/design_default_color_error"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <TextView
            android:id="@+id/tvFooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/do_not_have_an_account"
            android:textColor="@color/Button_1"
            android:fontFamily="@font/inter"
            app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
            app:layout_constraintStart_toStartOf="@+id/btnSignIn"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

        <TextView
            android:id="@+id/tvSubFooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter"
            android:text="@string/sign_up_redirect"
            android:textColor="@color/Button_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvFooter"
            app:layout_constraintStart_toStartOf="@+id/tvFooter"
            app:layout_constraintTop_toBottomOf="@+id/tvFooter"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>